Finished plotGuideSet function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: crisprViz
 Title: Visualization Functions for GuideSet objects
-Version: 0.99.3
+Version: 0.99.4
 Authors@R: c(
     person("Jean-Philippe", "Fortin", email = "fortin946@gmail.com", role = c("aut", "cre")),
     person("Luke", "Hoberecht", email = "lukehob3@gmail.com", role = c("aut"))
@@ -10,7 +10,14 @@ Depends: R (>= 4.2.0),
     crisprBase (>= 0.99.15),
     crisprDesign (>= 0.99.77)
 Imports:
-    Gviz
+	BiocGenerics,
+	GenomeInfoDb,
+	GenomicFeatures,
+	GenomicRanges,
+    Gviz,
+	IRanges,
+	methods,
+	S4Vectors
 Suggests:
     BiocStyle,
     knitr,
