Finished vignette; added margin and gcWindow args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(plotGuideSet)
 export(plotMultipleGuideSets)
 importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(IRanges,IRanges)
+importFrom(BSgenome,getSeq)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,start)
 importFrom(BiocGenerics,strand)
+importFrom(Biostrings,letterFrequency)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqnames)
@@ -16,6 +18,7 @@ importFrom(GenomicRanges,findOverlaps)
 importFrom(GenomicRanges,punion)
 importFrom(Gviz,"displayPars<-")
 importFrom(Gviz,AnnotationTrack)
+importFrom(Gviz,DataTrack)
 importFrom(Gviz,GeneRegionTrack)
 importFrom(Gviz,GenomeAxisTrack)
 importFrom(Gviz,IdeogramTrack)
