--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: crisprViz
 Title: Visualization Functions for GuideSet objects
-Version: 0.99.7
+Version: 0.99.7\8
 Authors@R: c(
     person("Jean-Philippe", "Fortin", email = "fortin946@gmail.com", role = c("aut", "cre")),
     person("Luke", "Hoberecht", email = "lukehob3@gmail.com", role = c("aut"))
@@ -11,6 +11,8 @@ Depends: R (>= 4.2.0),
     crisprDesign (>= 0.99.77)
 Imports:
 	BiocGenerics,
+	Biostrings,
+	BSgenome,
 	GenomeInfoDb,
 	GenomicFeatures,
 	GenomicRanges,
@@ -20,9 +22,12 @@ Imports:
 	S4Vectors
 Suggests:
     BiocStyle,
+	BSgenome.Hsapiens.UCSC.hg38,
     knitr,
     rmarkdown,
-    testthat
+	rtracklayer,
+    testthat,
+	utils
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
