--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,10 @@ Authors@R: c(
     person("Jean-Philippe", "Fortin", email = "fortin946@gmail.com", role = c("aut", "cre")),
     person("Luke", "Hoberecht", email = "lukehob3@gmail.com", role = c("aut"))
     )
-Description: Visualization Functions for CRISPR gRNAs.
+Description: Provides functionalities to visualize and contextualize
+    CRISPR guide RNAs (gRNAs) across nucleases and applications.
+    Works in conjunction with the crisprBase and crisprDesign 
+    Bioconductor packages. Plots are produced using the Gviz framework.
 Depends: R (>= 4.2.0),
     crisprBase (>= 0.99.15),
     crisprDesign (>= 0.99.77)
@@ -31,6 +34,10 @@ Suggests:
     rtracklayer,
     testthat,
     utils
+biocViews:
+    CRISPR,
+    FunctionalGenomics,
+    GeneTarget
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
