Revision based on kayla's comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(Gviz,SequenceTrack)
 importFrom(Gviz,plotTracks)
 importFrom(Gviz,strand)
 importFrom(Gviz,transcript)
+importFrom(IRanges,IRanges)
 importFrom(IRanges,restrict)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,isTRUEorFALSE)
