--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: crisprViz
 Title: Visualization Functions for CRISPR gRNAs
-Version: 0.99.18
+Version: 0.99.19
 Authors@R: c(
     person("Jean-Philippe", "Fortin", email = "fortin946@gmail.com", role = c("aut", "cre")),
     person("Luke", "Hoberecht", email = "lukehob3@gmail.com", role = c("aut"))
     )
 Description: Provides functionalities to visualize and contextualize
-    CRISPR guide RNAs (gRNAs) across nucleases and applications.
-    Works in conjunction with the crisprBase and crisprDesign 
+    CRISPR guide RNAs (gRNAs) on genomic tracks across nucleases and
+    applications. Works in conjunction with the crisprBase and crisprDesign 
     Bioconductor packages. Plots are produced using the Gviz framework.
 Depends: R (>= 4.2.0),
     crisprBase (>= 0.99.15),
