The makeTxDb*() functions have moved from GenomicFeatures to txdbmaker

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: crisprViz
 Title: Visualization Functions for CRISPR gRNAs
-Version: 1.5.1
+Version: 1.5.2
 Authors@R: c(
     person("Jean-Philippe", "Fortin", email = "fortin946@gmail.com", role = c("aut", "cre")),
     person("Luke", "Hoberecht", email = "lukehob3@gmail.com", role = c("aut"))
@@ -23,7 +23,8 @@ Imports:
     Gviz,
     IRanges,
     methods,
-    S4Vectors
+    S4Vectors,
+    txdbmaker
 Suggests:
     AnnotationHub,
     BiocStyle,
@@ -32,8 +33,7 @@ Suggests:
     rmarkdown,
     rtracklayer,
     testthat,
-    utils,
-    txdbmaker
+    utils
 biocViews:
     CRISPR,
     FunctionalGenomics,
@@ -41,7 +41,7 @@ biocViews:
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 VignetteBuilder: knitr
 BugReports: https://github.com/crisprVerse/crisprViz/issues
 URL: https://github.com/crisprVerse/crisprViz
