--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ importFrom(Biostrings,letterFrequency)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqnames)
-importFrom(GenomicFeatures,makeTxDb)
 importFrom(GenomicFeatures,transcripts)
 importFrom(GenomicRanges,findOverlaps)
 importFrom(GenomicRanges,punion)
@@ -41,3 +40,4 @@ importFrom(crisprDesign,snps)
 importFrom(grDevices,colorRampPalette)
 importFrom(methods,as)
 importFrom(methods,is)
+importFrom(txdbmaker,makeTxDb)
